--- a/test-output/old/Suite/ieTest.properties
+++ b/test-output/old/Suite/ieTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=ChromeTest][SuiteResult context=ieTest]
+[SuiteResult context=ChromeTest][SuiteResult context=ieTest][SuiteResult context=ffTest]
